--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,12 @@
       <version>8.2.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+    <dependency>
+      <groupId>com.aventstack</groupId>
+      <artifactId>extentreports</artifactId>
+      <version>5.1.1</version>
+    </dependency>
+
   </dependencies>
 </project>
